--- a/addWindow.html
+++ b/addWindow.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Add Shopping List Item</title>
-</head>
-<body>
-  <form >
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Add Shopping List Item</title>
+  </head>
+  <body>
+    <form>
       <div>
         <label for="">Enter item</label>
-        <input type="text" id="item" autofocus>
+        <input type="text" id="item" autofocus />
       </div>
       <button type="submit">add Item</button>
-  </form>
-</body>
+    </form>
+    <script>
+      const electron = require("electron");
+      const { ipcRenderer } = electron;
+
+      const form =document.querySelector('form');
+      form.addEventListener('submit', submitForm);
+      function submitForm(e){
+        e.preventDefault();
+        console.log(123);
+      }
+    </script>
+  </body>
 </html>
